# RepairChain

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  litellm.local.yml  pyproject.toml
.github/workflows/: poetry.yml
examples/: .gitignore  Makefile
examples/jenkins/: Dockerfile  Makefile  index.kaskara.json  index.sh  project.json  repair.sh
examples/linux/: Dockerfile  Makefile  project.json  sanitizer.txt
examples/mock-cp/: Dockerfile  Makefile  index.kaskara.json  index.sh  project.json  repair.sh  sanitizer.txt  shell.sh
examples/nginx/: .gitignore  Dockerfile  Makefile  project.json  sanitizer.txt
scripts/: .common.sh  clear-caches.sh  diagnose.sh  end2end.sh  generate.sh  integration-tests.sh  repair-linux.sh  repair.sh  validate.sh
src/repairchain/: __main__.py  cli.py  errors.py  indexer.py  orchestrator.py  repairchain.py  sources.py  util.py
src/repairchain/actions/: build_container.py  commit_to_diff.py  determine_bug_type.py  determine_patch_generation_strategy.py  diagnose.py  generate.py  index_functions.py  index_statements.py  localize_diff.py  map_functions.py  minimize.py  minimize_diff.py  repair.py  validate.py
src/repairchain/models/: bug_type.py  container.py  diagnosis.py  diff.py  patch_outcome.py  project.py  replacement.py  sanitizer_report.py  settings.py  stack_trace.py  vulnerability.py
src/repairchain/strategies/generation/: __init__.py  base.py  commitdd.py  delete_statements.py  reversion.py  sequence.py  templates.py
src/repairchain/strategies/generation/llm/: __init__.py  context.py  helper_code.py  llm.py  simple_yolo.py  summarize_code.py  superyolo_llm.py  util.py  yolo_llm.py
src/repairchain/strategies/generation/template/: base.py  bounds_check.py  increase_size.py  init_mem.py  integer_overflow.py  null_ptr.py  strategy.py  use_after_free.py
src/repairchain/strategies/generation/templates/: __init__.py
src/repairchain/strategies/llms/: context.py  simple_yolo.py  yolo.py
test/: conftest.py  test_diffs.py  test_indexer.py  test_minimize_diff.py  test_placeholder.py  test_sources.py  test_templates.py  test_util.py
test/data/: asan2.txt  kfence-oob-gpt.txt  memsan-gpt.txt  ubsan-gpt.txt
test/data-parsing/: expected1.txt  llm-output1.txt  llm-output2.txt  llm-output4.txt  llm-output5.txt  llm-output6.txt  original.txt
test/integration/: conftest.py  test_diagnose.py  test_indexer.py  test_repair.py  test_reversion_strategy.py  test_sources.py  test_util.py
test/unit/: test_diffs.py  test_sanitizer_parsing.py  test_util.py
test/unit/resources/: example.diff
test/unit/resources/parsing/: expected2.txt  expected3.txt  expected4.txt  expected5.txt  expected6.txt  llm-output3.txt  original2.txt
test/unit/resources/sanitizers/: asan1.txt  asan3.txt  jenkins.txt  kasan-gpt.txt  ubsan-gpt.txt
